Add port to conf_sirius

--- a/registration/conf_sirius.yml
+++ b/registration/conf_sirius.yml
@@ -1,6 +1,5 @@
-hostname: sirius
+hostname: sirius1
 global_hostname: 62.183.4.6
-column_name: action
-column_num: 8
+port: 17330
 root_quota_user: aiadmin
 gsheet: https://docs.google.com/spreadsheets/d/1wENTr_elp4zw1vOD8RmuaH0kFpqV7EvHYUoOyLNZvAM
